--- a/styles/breakpoints/_960up.scss
+++ b/styles/breakpoints/_960up.scss
@@ -100,6 +100,13 @@ Stylesheet: 960px以上のモニタで適用
       }
   }
 }
+.previewImgWrapper {
+  & .previewImg {
+      width: 80%;
+      max-width: 800px;
+      height: 450px;
+  }
+}
 
 .skills {
   margin-top: 150px;
