--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -1058,6 +1058,7 @@ h2 {
     position: relative;
     width: 100%;
     height: 75vh;
+    overflow: hidden;
     & .contact-bg-char {
         position: absolute;
         top: 19%;
