--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -654,6 +654,7 @@ h2 {
     }
     & .previewImg {
         position: absolute;
+        top: 25%;
         width: 100%;
         height: 300px;
         background-position: center;
@@ -665,6 +666,7 @@ h2 {
             top: 102%;
             left: 1%;
             color: $c-white;
+            letter-spacing: 1.5px;
         }
     }
 }
@@ -798,6 +800,8 @@ h2 {
                 }
                 & .about-img {
                     position: absolute;
+                    top: 0;
+                    left: 0;
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
@@ -824,6 +828,8 @@ h2 {
                 }
                 & .about-video {
                     position: absolute;
+                    top: 0;
+                    left: 0;
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
