--- a/styles/breakpoints/_960up.scss
+++ b/styles/breakpoints/_960up.scss
@@ -99,6 +99,12 @@ Stylesheet: 960px以上のモニタで適用
         margin: 0 0 0 10%;
       }
   }
+  &__footer {
+    font-size: 15px;
+    width: 100%;
+    height: 500px;
+    letter-spacing: 5px;
+  }
 }
 .previewImgWrapper {
   & .previewImg {
