--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -372,7 +372,7 @@ h2 {
     position: relative;
     width: 100%;
     height: 551px;
-    background-image: url("/images/main-visual-img.jpg");
+    background-image: url("../images/main-visual-img.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
