--- a/styles/style.css
+++ b/styles/style.css
@@ -404,7 +404,7 @@ a {
   position: relative;
   width: 100%;
   height: 551px;
-  background-image: url("/images/main-visual-img.jpg");
+  background-image: url("../images/main-visual-img.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -650,7 +650,7 @@ a {
   left: 15%;
   width: 220px;
   height: 250px;
-  background: url(/images/profile-icon.jpg) center;
+  background: url(../images/profile-icon.jpg) center;
   background-size: cover;
   -webkit-box-shadow: 1px 1px 20px #000;
           box-shadow: 1px 1px 20px #000;
@@ -1059,32 +1059,32 @@ a {
 }
 
 .skills__skills-wrapper .skills-icons-wrapper .skill-icon.__ruby {
-  background: url("/images/ruby-icon.png") no-repeat center;
+  background: url("../images/ruby-icon.png") no-repeat center;
   background-size: contain;
 }
 
 .skills__skills-wrapper .skills-icons-wrapper .skill-icon.__rails {
-  background: url("/images/rails-icon.png") no-repeat center;
+  background: url("../images/rails-icon.png") no-repeat center;
   background-size: contain;
 }
 
 .skills__skills-wrapper .skills-icons-wrapper .skill-icon.__html {
-  background: url("/images/html-icon.png") no-repeat center;
+  background: url("../images/html-icon.png") no-repeat center;
   background-size: contain;
 }
 
 .skills__skills-wrapper .skills-icons-wrapper .skill-icon.__css {
-  background: url("/images/css-icon.png") no-repeat center;
+  background: url("../images/css-icon.png") no-repeat center;
   background-size: contain;
 }
 
 .skills__skills-wrapper .skills-icons-wrapper .skill-icon.__js {
-  background: url("/images/js-icon.png") no-repeat center;
+  background: url("../images/js-icon.png") no-repeat center;
   background-size: contain;
 }
 
 .skills__skills-wrapper .skills-icons-wrapper .skill-icon.__next {
-  background: url("/images/next.png") no-repeat center;
+  background: url("../images/next.png") no-repeat center;
   background-size: contain;
 }
 
@@ -1265,15 +1265,15 @@ a {
 }
 
 .works .works-container__work-wrapper .work.__1 {
-  background-image: url("/images/works1.jpg");
+  background-image: url("../images/works1.jpg");
 }
 
 .works .works-container__work-wrapper .work.__2 {
-  background-image: url("/images/works2.jpg");
+  background-image: url("../images/works2.jpg");
 }
 
 .works .works-container__work-wrapper .work.__3 {
-  background-image: url("/images/works3.jpg");
+  background-image: url("../images/works3.jpg");
 }
 
 .works .works-container__work-wrapper .work.active {
